<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AracDetayActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/img_d_kapak"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/Detay_Kapak_Height"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/aciklamakapak" />

                <TextView
                    android:id="@+id/txt_d_baslik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/txt_padding"
                    android:text="@string/CardView_Baslik"
                    android:textAlignment="center"
                    android:textColor="@color/BaslikRengi"
                    android:textSize="@dimen/Detay_Baslik_Boyut"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_d_stable_release_baslik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/DetayStableBaslik"
                    android:textAlignment="center"
                    android:textColor="@color/BaslikRengi"
                    android:textSize="@dimen/Detay_Aciklama_Boyut"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_d_stable_release"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/DetayStable"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/Detay_Aciklama_Boyut" />

                <TextView
                    android:id="@+id/txt_d_detay_baslik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/DetayBaslik"
                    android:textAlignment="center"
                    android:textColor="@color/BaslikRengi"
                    android:textSize="@dimen/Detay_Aciklama_Boyut"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_d_detay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/txt_padding"
                    android:text="@string/DetayAciklama"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/Detay_Aciklama_Boyut" />

                <TextView
                    android:id="@+id/txt_d_website_baslik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/DetayWebSitesiBaslik"
                    android:textAlignment="center"
                    android:textColor="@color/BaslikRengi"
                    android:textSize="@dimen/Detay_Aciklama_Boyut"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_d_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/DetayWebSitesi"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

            </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>